src/generated/grammar/VerilogParser.js
"use strict";
// Generated from grammar/Verilog.g4 by ANTLR 4.9.0-SNAPSHOT
var __createBinding = (this && this.__createBinding) || (Object.create ? (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    var desc = Object.getOwnPropertyDescriptor(m, k);
    if (!desc || ("get" in desc ? !m.__esModule : desc.writable || desc.configurable)) {
      desc = { enumerable: true, get: function() { return m[k]; } };
    }
    Object.defineProperty(o, k2, desc);
}) : (function(o, m, k, k2) {
    if (k2 === undefined) k2 = k;
    o[k2] = m[k];
}));
var __setModuleDefault = (this && this.__setModuleDefault) || (Object.create ? (function(o, v) {
    Object.defineProperty(o, "default", { enumerable: true, value: v });
}) : function(o, v) {
    o["default"] = v;
});
var __importStar = (this && this.__importStar) || (function () {
    var ownKeys = function(o) {
        ownKeys = Object.getOwnPropertyNames || function (o) {
            var ar = [];
            for (var k in o) if (Object.prototype.hasOwnProperty.call(o, k)) ar[ar.length] = k;
            return ar;
        };
        return ownKeys(o);
    };
    return function (mod) {
        if (mod && mod.__esModule) return mod;
        var result = {};
        if (mod != null) for (var k = ownKeys(mod), i = 0; i < k.length; i++) if (k[i] !== "default") __createBinding(result, mod, k[i]);
        __setModuleDefault(result, mod);
        return result;
    };
})();
Object.defineProperty(exports, "__esModule", { value: true });
exports.ExpressionContext = exports.Constant_expressionContext = exports.Variable_lvalueContext = exports.Net_lvalueContext = exports.Case_itemContext = exports.Case_statementContext = exports.Conditional_statementContext = exports.Non_blocking_assignmentContext = exports.Blocking_assignmentContext = exports.Seq_blockContext = exports.StatementContext = exports.Event_expressionContext = exports.Always_constructContext = exports.Initial_constructContext = exports.Net_assignmentContext = exports.List_of_net_assignmentsContext = exports.Continuous_assignContext = exports.Parameter_identifierContext = exports.Param_assignmentContext = exports.List_of_param_assignmentsContext = exports.Parameter_declarationContext = exports.Register_identifierContext = exports.Net_identifierContext = exports.List_of_register_identifiersContext = exports.List_of_net_identifiersContext = exports.List_of_port_identifiersContext = exports.RangeContext = exports.Net_typeContext = exports.Reg_declarationContext = exports.Net_declarationContext = exports.Inout_declarationContext = exports.Output_declarationContext = exports.Input_declarationContext = exports.Port_declarationContext = exports.Module_itemContext = exports.Constant_range_expressionContext = exports.Inout_declaration_ansiContext = exports.Output_declaration_ansiContext = exports.Input_declaration_ansiContext = exports.Ansi_port_declarationContext = exports.Port_identifierContext = exports.Port_referenceContext = exports.Port_expressionContext = exports.PortContext = exports.List_of_portsContext = exports.Module_identifierContext = exports.Module_declarationContext = exports.DescriptionContext = exports.Source_textContext = exports.VerilogParser = void 0;
exports.Binary_operatorContext = exports.Unary_operatorContext = exports.Multiple_concatenationContext = exports.ConcatenationContext = exports.PrimaryContext = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = __importStar(require("antlr4ts/misc/Utils"));
class VerilogParser extends Parser_1.Parser {
    // @Override
    // @NotNull
    get vocabulary() {
        return VerilogParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "Verilog.g4"; }
    // @Override
    get ruleNames() { return VerilogParser.ruleNames; }
    // @Override
    get serializedATN() { return VerilogParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(VerilogParser._ATN, this);
    }
    // @RuleVersion(0)
    source_text() {
        let _localctx = new Source_textContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, VerilogParser.RULE_source_text);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 111;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === VerilogParser.T__0) {
                    {
                        {
                            this.state = 108;
                            this.description();
                        }
                    }
                    this.state = 113;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 114;
                this.match(VerilogParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    description() {
        let _localctx = new DescriptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, VerilogParser.RULE_description);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 116;
                this.module_declaration();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    module_declaration() {
        let _localctx = new Module_declarationContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, VerilogParser.RULE_module_declaration);
        let _la;
        try {
            this.state = 166;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 6, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 118;
                        this.match(VerilogParser.T__0);
                        this.state = 119;
                        this.module_identifier();
                        this.state = 121;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        if (_la === VerilogParser.T__3) {
                            {
                                this.state = 120;
                                this.list_of_ports();
                            }
                        }
                        this.state = 123;
                        this.match(VerilogParser.T__1);
                        this.state = 127;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VerilogParser.T__9) | (1 << VerilogParser.T__10) | (1 << VerilogParser.T__11) | (1 << VerilogParser.T__12) | (1 << VerilogParser.T__14) | (1 << VerilogParser.T__15) | (1 << VerilogParser.T__16) | (1 << VerilogParser.T__17) | (1 << VerilogParser.T__20) | (1 << VerilogParser.T__22) | (1 << VerilogParser.T__23) | (1 << VerilogParser.T__24))) !== 0)) {
                            {
                                {
                                    this.state = 124;
                                    this.module_item();
                                }
                            }
                            this.state = 129;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                        this.state = 130;
                        this.match(VerilogParser.T__2);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 132;
                        this.match(VerilogParser.T__0);
                        this.state = 133;
                        this.module_identifier();
                        this.state = 134;
                        this.match(VerilogParser.T__3);
                        this.state = 135;
                        this.ansi_port_declaration();
                        this.state = 140;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === VerilogParser.T__4) {
                            {
                                {
                                    this.state = 136;
                                    this.match(VerilogParser.T__4);
                                    this.state = 137;
                                    this.ansi_port_declaration();
                                }
                            }
                            this.state = 142;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                        this.state = 143;
                        this.match(VerilogParser.T__5);
                        this.state = 144;
                        this.match(VerilogParser.T__1);
                        this.state = 148;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VerilogParser.T__9) | (1 << VerilogParser.T__10) | (1 << VerilogParser.T__11) | (1 << VerilogParser.T__12) | (1 << VerilogParser.T__14) | (1 << VerilogParser.T__15) | (1 << VerilogParser.T__16) | (1 << VerilogParser.T__17) | (1 << VerilogParser.T__20) | (1 << VerilogParser.T__22) | (1 << VerilogParser.T__23) | (1 << VerilogParser.T__24))) !== 0)) {
                            {
                                {
                                    this.state = 145;
                                    this.module_item();
                                }
                            }
                            this.state = 150;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                        this.state = 151;
                        this.match(VerilogParser.T__2);
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 153;
                        this.match(VerilogParser.T__0);
                        this.state = 154;
                        this.module_identifier();
                        this.state = 155;
                        this.match(VerilogParser.T__3);
                        this.state = 156;
                        this.match(VerilogParser.T__5);
                        this.state = 157;
                        this.match(VerilogParser.T__1);
                        this.state = 161;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VerilogParser.T__9) | (1 << VerilogParser.T__10) | (1 << VerilogParser.T__11) | (1 << VerilogParser.T__12) | (1 << VerilogParser.T__14) | (1 << VerilogParser.T__15) | (1 << VerilogParser.T__16) | (1 << VerilogParser.T__17) | (1 << VerilogParser.T__20) | (1 << VerilogParser.T__22) | (1 << VerilogParser.T__23) | (1 << VerilogParser.T__24))) !== 0)) {
                            {
                                {
                                    this.state = 158;
                                    this.module_item();
                                }
                            }
                            this.state = 163;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                        this.state = 164;
                        this.match(VerilogParser.T__2);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    module_identifier() {
        let _localctx = new Module_identifierContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, VerilogParser.RULE_module_identifier);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 168;
                this.match(VerilogParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    list_of_ports() {
        let _localctx = new List_of_portsContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, VerilogParser.RULE_list_of_ports);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 170;
                this.match(VerilogParser.T__3);
                this.state = 171;
                this.port();
                this.state = 176;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === VerilogParser.T__4) {
                    {
                        {
                            this.state = 172;
                            this.match(VerilogParser.T__4);
                            this.state = 173;
                            this.port();
                        }
                    }
                    this.state = 178;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 179;
                this.match(VerilogParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    port() {
        let _localctx = new PortContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, VerilogParser.RULE_port);
        let _la;
        try {
            this.state = 192;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case VerilogParser.T__4:
                case VerilogParser.T__5:
                case VerilogParser.T__7:
                case VerilogParser.IDENTIFIER:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 182;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        if (_la === VerilogParser.T__7 || _la === VerilogParser.IDENTIFIER) {
                            {
                                this.state = 181;
                                this.port_expression();
                            }
                        }
                    }
                    break;
                case VerilogParser.T__6:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 184;
                        this.match(VerilogParser.T__6);
                        this.state = 185;
                        this.port_identifier();
                        this.state = 186;
                        this.match(VerilogParser.T__3);
                        this.state = 188;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        if (_la === VerilogParser.T__7 || _la === VerilogParser.IDENTIFIER) {
                            {
                                this.state = 187;
                                this.port_expression();
                            }
                        }
                        this.state = 190;
                        this.match(VerilogParser.T__5);
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    port_expression() {
        let _localctx = new Port_expressionContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, VerilogParser.RULE_port_expression);
        let _la;
        try {
            this.state = 206;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case VerilogParser.IDENTIFIER:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 194;
                        this.port_reference();
                    }
                    break;
                case VerilogParser.T__7:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 195;
                        this.match(VerilogParser.T__7);
                        this.state = 196;
                        this.port_reference();
                        this.state = 201;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === VerilogParser.T__4) {
                            {
                                {
                                    this.state = 197;
                                    this.match(VerilogParser.T__4);
                                    this.state = 198;
                                    this.port_reference();
                                }
                            }
                            this.state = 203;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                        this.state = 204;
                        this.match(VerilogParser.T__8);
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    port_reference() {
        let _localctx = new Port_referenceContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, VerilogParser.RULE_port_reference);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 208;
                this.port_identifier();
                this.state = 210;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === VerilogParser.T__3 || _la === VerilogParser.T__7 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & ((1 << (VerilogParser.T__38 - 39)) | (1 << (VerilogParser.T__39 - 39)) | (1 << (VerilogParser.T__40 - 39)) | (1 << (VerilogParser.T__41 - 39)) | (1 << (VerilogParser.T__42 - 39)) | (1 << (VerilogParser.T__43 - 39)) | (1 << (VerilogParser.T__44 - 39)) | (1 << (VerilogParser.IDENTIFIER - 39)) | (1 << (VerilogParser.NUMBER - 39)))) !== 0)) {
                    {
                        this.state = 209;
                        this.constant_range_expression();
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    port_identifier() {
        let _localctx = new Port_identifierContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, VerilogParser.RULE_port_identifier);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 212;
                this.match(VerilogParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    ansi_port_declaration() {
        let _localctx = new Ansi_port_declarationContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, VerilogParser.RULE_ansi_port_declaration);
        try {
            this.state = 217;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case VerilogParser.T__9:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 214;
                        this.input_declaration_ansi();
                    }
                    break;
                case VerilogParser.T__10:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 215;
                        this.output_declaration_ansi();
                    }
                    break;
                case VerilogParser.T__12:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 216;
                        this.inout_declaration_ansi();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    input_declaration_ansi() {
        let _localctx = new Input_declaration_ansiContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, VerilogParser.RULE_input_declaration_ansi);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 219;
                this.match(VerilogParser.T__9);
                this.state = 221;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VerilogParser.T__14) | (1 << VerilogParser.T__15) | (1 << VerilogParser.T__16) | (1 << VerilogParser.T__17))) !== 0)) {
                    {
                        this.state = 220;
                        this.net_type();
                    }
                }
                this.state = 224;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === VerilogParser.T__18) {
                    {
                        this.state = 223;
                        this.range();
                    }
                }
                this.state = 226;
                this.port_identifier();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    output_declaration_ansi() {
        let _localctx = new Output_declaration_ansiContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, VerilogParser.RULE_output_declaration_ansi);
        let _la;
        try {
            this.state = 242;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 20, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 228;
                        this.match(VerilogParser.T__10);
                        this.state = 230;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VerilogParser.T__14) | (1 << VerilogParser.T__15) | (1 << VerilogParser.T__16) | (1 << VerilogParser.T__17))) !== 0)) {
                            {
                                this.state = 229;
                                this.net_type();
                            }
                        }
                        this.state = 233;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        if (_la === VerilogParser.T__18) {
                            {
                                this.state = 232;
                                this.range();
                            }
                        }
                        this.state = 235;
                        this.port_identifier();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 236;
                        this.match(VerilogParser.T__10);
                        this.state = 237;
                        this.match(VerilogParser.T__11);
                        this.state = 239;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        if (_la === VerilogParser.T__18) {
                            {
                                this.state = 238;
                                this.range();
                            }
                        }
                        this.state = 241;
                        this.port_identifier();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    inout_declaration_ansi() {
        let _localctx = new Inout_declaration_ansiContext(this._ctx, this.state);
        this.enterRule(_localctx, 24, VerilogParser.RULE_inout_declaration_ansi);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 244;
                this.match(VerilogParser.T__12);
                this.state = 246;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VerilogParser.T__14) | (1 << VerilogParser.T__15) | (1 << VerilogParser.T__16) | (1 << VerilogParser.T__17))) !== 0)) {
                    {
                        this.state = 245;
                        this.net_type();
                    }
                }
                this.state = 249;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === VerilogParser.T__18) {
                    {
                        this.state = 248;
                        this.range();
                    }
                }
                this.state = 251;
                this.port_identifier();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    constant_range_expression() {
        let _localctx = new Constant_range_expressionContext(this._ctx, this.state);
        this.enterRule(_localctx, 26, VerilogParser.RULE_constant_range_expression);
        try {
            this.state = 258;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 23, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 253;
                        this.constant_expression();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 254;
                        this.constant_expression();
                        this.state = 255;
                        this.match(VerilogParser.T__13);
                        this.state = 256;
                        this.constant_expression();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    module_item() {
        let _localctx = new Module_itemContext(this._ctx, this.state);
        this.enterRule(_localctx, 28, VerilogParser.RULE_module_item);
        try {
            this.state = 267;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case VerilogParser.T__9:
                case VerilogParser.T__10:
                case VerilogParser.T__12:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 260;
                        this.port_declaration();
                    }
                    break;
                case VerilogParser.T__14:
                case VerilogParser.T__15:
                case VerilogParser.T__16:
                case VerilogParser.T__17:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 261;
                        this.net_declaration();
                    }
                    break;
                case VerilogParser.T__11:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 262;
                        this.reg_declaration();
                    }
                    break;
                case VerilogParser.T__20:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 263;
                        this.parameter_declaration();
                    }
                    break;
                case VerilogParser.T__22:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 264;
                        this.continuous_assign();
                    }
                    break;
                case VerilogParser.T__23:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 265;
                        this.initial_construct();
                    }
                    break;
                case VerilogParser.T__24:
                    this.enterOuterAlt(_localctx, 7);
                    {
                        this.state = 266;
                        this.always_construct();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    port_declaration() {
        let _localctx = new Port_declarationContext(this._ctx, this.state);
        this.enterRule(_localctx, 30, VerilogParser.RULE_port_declaration);
        try {
            this.state = 272;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case VerilogParser.T__9:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 269;
                        this.input_declaration();
                    }
                    break;
                case VerilogParser.T__10:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 270;
                        this.output_declaration();
                    }
                    break;
                case VerilogParser.T__12:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 271;
                        this.inout_declaration();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    input_declaration() {
        let _localctx = new Input_declarationContext(this._ctx, this.state);
        this.enterRule(_localctx, 32, VerilogParser.RULE_input_declaration);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 274;
                this.match(VerilogParser.T__9);
                this.state = 276;
                this._errHandler.sync(this);
